# icesl-nodes

./: CMakeLists.txt  FileDialog.cpp  FileDialog.h  GenericWindow.h  GraphError.h  GraphMaker.cpp  GraphMaker.h  GraphSaver.cpp  GraphSaver.h  NodeLua.cpp  NodeLua.h  NodeWindow.cpp  NodeWindow.h  Resources.cpp  Resources.h  main.cpp  project.h  tweaks.h
tests/reloaded/: graph.xml
tests/reloaded/nodes/: distribute.lua
tests/reloaded/nodes/csg/: intersection.lua  union.lua
tests/reloaded/nodes/input/: int.lua  scalar.lua  string.lua  value.lua
tests/reloaded/nodes/output/: emit.lua
